# ai-gen-code-search

./: .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  Makefile  NOTICE  README.rst  README_samecode.rst  requirements-dev.txt  setup.cfg
.github/workflows/: docs-ci.yml
docs/references/: ai-gcs-approximate-content-matching-defensive-pub-v8.docx
docs/source/: api.rst  approximate-matching-design-1.rst  approximate-matching-design-2.rst  approximate-matching-design-3.rst  approximate-matching-testing-2.rst  approximate-matching-testing.rst  conf.py  contributing.rst  halohash-distance-plots.ods  index.rst  installation.rst  matchcodeio_gen-ai-search-test-100.json  matchcodeio_gen-ai-search-test-100_results.ods  samecode_api.rst  samecode_installation.rst  samecode_overview.rst
docs/source/e2e/: detect-ai-gen-code.rst
src/samecode/: __init__.py  chunking.py  halohash.py
tests/: test_chunking.py  test_hailstorm.py  test_halohash.py  test_halohash1.py  test_skeleton_codestyle.py
